# C-_Cache_System

./: .gitignore  CMakeLists.txt  README.md
include/mycache/: ARCCache.h  ICache.h  LFUCache.h  LRUCache.h  mycache.h
notes/: benchmark-guide.md  learning-log.md
src/: Benchmark.cpp  bench_cache.cpp  dummy.cpp  main.cpp
tests/: test_arc.cpp  test_icache_basic.cpp  test_lfu.cpp  test_lru.cpp
